--- a/assets/styles/state.scss
+++ b/assets/styles/state.scss
@@ -37,6 +37,7 @@ $dark: #34495E;
   	h2 {
   		font-weight: 400;
   		font-size: 1em;
+  		margin-top: 1em;
   	}
 
   	h1, h2 {
@@ -255,7 +256,7 @@ ul li label{
   font-weight: 400;
   font-size: 0.6em;
   text-transform: uppercase;
-  padding: 2px 3px 10px 30px;
+  padding: 3px 3px 10px 30px;
   margin: 0;
   height: 10px;
   z-index: 9;
